[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/emulogic.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/images/heart_small.png" type="Texture" id=2]
[ext_resource path="res://assets/images/heart_large.png" type="Texture" id=3]
[ext_resource path="res://assets/images/yarou.png" type="Texture" id=4]
[ext_resource path="res://assets/images/motherfucker.png" type="Texture" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/crash.wav" type="AudioStream" id=7]

[sub_resource type="BitmapFont" id=8]

[sub_resource type="Theme" id=2]
/fonts/Font = SubResource( 8 )

[sub_resource type="BitmapFont" id=9]

[sub_resource type="Theme" id=3]
/fonts/Font = SubResource( 9 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/images/emulogic.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 118.5, 6.25 )

[sub_resource type="Animation" id=7]
resource_name = "Flash"
length = 0.22
tracks/0/type = "value"
tracks/0/path = NodePath("Flash/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flash/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="Objects" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -43.0
margin_top = -24.0
margin_right = 213.0
margin_bottom = 144.0
color = Color( 0, 0.439216, 0.92549, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_left = -43.0
margin_top = 206.0
margin_right = 213.0
margin_bottom = 374.0
color = Color( 0.12549, 0.219608, 0.92549, 1 )

[node name="BG" type="Sprite" parent="CanvasLayer"]
position = Vector2( 85, 147 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 90.75, 235.967 )
scale = Vector2( 0.3025, 0.293443 )
texture = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]
layer = -1

[node name="bigheart" type="Sprite" parent="HUD"]
position = Vector2( 150, 308 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="heart1" type="Sprite" parent="HUD"]
position = Vector2( 132, 310 )
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="heart2" type="Sprite" parent="HUD"]
position = Vector2( 168, 310 )
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="Score" type="Label" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 16.0
margin_right = 20.0
margin_bottom = 26.0
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "score"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -58.0
margin_right = 74.5
margin_bottom = -18.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="KillPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
position = Vector2( 89, 344 )
shape = SubResource( 6 )

[node name="Flash" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Flash"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.0
margin_top = -1.0
margin_right = 182.0
margin_bottom = 322.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 7 )

[node name="Sounds" type="Node" parent="."]

[node name="Crash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="KillPlane" to="." method="_on_KillPlane_body_entered"]
